crates/amalgam-parser/tests/snapshots/comprehensive_nickel_test__safe_type_operations.snap
---
source: crates/amalgam-parser/tests/comprehensive_nickel_test.rs
expression: snapshot_content
---
SUCCESS: false

OUTPUT:
STDERR:
error: unexpected token
  ┌─ /Users/jtoft/src/ai/amalgam/examples/pkgs/k8s_io/v1/affinity.ncl:5:13
  │
5 │ PodAffinity = {
  │             ^
  │
  ┌─ /Users/jtoft/src/ai/amalgam/examples/pkgs/k8s_io/v1/mod.ncl:6:14
  │
6 │   Affinity = import "./affinity.ncl",
  │              ----------------------- imported here


STDOUT:
